# claude-skills-management

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ui.pen
.claude-plugin/: plugin.json
dashboard/analytics/: analytics.py  views.py
dashboard/analytics/templates/analytics/: dashboard.html
dashboard/analytics_project/: settings.py  urls.py
docs/: TODO.md  workflow-state.yaml
docs/adrs/: adr-1-plugin-packaging.md  adr-1-sqlite-storage.md
docs/discovery/: disco-1.md  disco-4.md
docs/features/: ft-1-skills-analytics.md  ft-4-plugin-packaging.md
docs/prds/: prd.md
docs/specs/: spec-plugin-packaging.md  spec-skills-analytics.md
hooks/: hooks.json
scripts/: db.py  inventory_snapshot.py  log_event.py  skill_discovery.py
skills/analytics-dashboard/: SKILL.md
skills/skills-analytics-dashboard/: SKILL.md
tests/: test_analytics.py
tests/dashboard/: test_analytics.py  test_api.py  test_integration_api.py  test_settings.py
tests/hooks/: test_db.py  test_integration_hooks.py  test_integration_plugin.py  test_inventory_snapshot.py  test_log_event.py  test_log_event_file_read_fix.py  test_plugin_config.py  test_skill_discovery.py
